# rupaOS

./: .gitattributes  README.md
30DaysProject/: .gitignore
30DaysProject/tolset/: .gitignore
30DaysProject/tolset/os/: asmhead.nas  haribote.img  ipl10.nas
HITOS/: bootsect.S
learn_os/30_day/: .gitignore  LGPL.txt
learn_os/30_day/os/: Makefile  app_make.txt  haribote.img
learn_os/64x-bochs/: .clang-format  Makefile  bochsrc  boot.asm  boot.img
learn_os/64x-bochs/src/: boot.asm
learn_os/docs/TingHuaOS/: 零 初始化项目.md
learn_os/learn_rust/: Cargo.toml  Makefile
learn_os/notes/: rcore_and_linux_note.md
learn_os/osblog/: .gitignore  Cargo.toml  Makefile  make_hdd.sh
learn_os/osblog/.cargo/: config.toml
learn_os/osblog/src/: assembly.rs  lib.rs  main.rs
learn_os/osblog/src/asm/: boot.S
learn_os/osblog/src/lds/: virt.ld  virt.lds
learn_os/rCore-Tutorial/: .sync.ffs_db  Cargo.toml  os.code-workspace  rust-toolchain
learn_os/rCore-Tutorial/_gsdata_/: _file_state_v4._gs  _insync_v4.gsl
learn_os/rCore-Tutorial/os/: Cargo.toml
learn_os/rCore-Tutorial/user/: Cargo.toml
learn_os/rCore/src/: main.rs
learn_os/rcorev2/: .gitignore
learn_os/rcorev2/os/: Cargo.toml  Makefile
learn_os/rcorev2/user/: Cargo.toml  Makefile  build.py
learn_os/rcorev3/os/: .gitignore
learn_os/risc-v/: for.s  leaf.s  risc-v.md  sumsquare.s  test.s
rCore/: Cargo.toml
rupaOS/: Cargo.toml  make_hdd.sh
rupaOS/os/: Makefile
rupaOS/os/.cargo/: config
rupaOS/os/src/: kmem.rs  main.rs  page.rs  uart.rs
rupaOS/user/: Cargo.toml
test/: main.cpp
(+58 files in other folders)
