[package]
name = "osblog"
version = "0.1.0"
authors = ["xmmmmmovo <13256172360@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]